--- a/kakao/style.css
+++ b/kakao/style.css
@@ -1,5 +1,5 @@
 * {
-    margin: 0 auto;
+    margin: 0;
     padding: 0;
 }
 
@@ -12,19 +12,23 @@ li {
     list-style: none;
 }
 
+.wrap {
+    width: 100%;
+}
+
 header {
     width: 100%;
     height: 70px;
     display: flex;
-    background-color: lightblue;
+    background: lightblue;
 }
 
 .logo {
-    width: 400px;
+    width: 300px;
     height: 70px;
-    text-align: center;
+    text-align: right;
     line-height: 70px;
-    font-size: 20px;
+    font-size: 24px;
     font-weight: 900;
 }
 
@@ -32,12 +36,12 @@ nav {
     width: 900px;
     height: 70px;
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
 }
 
 nav > ul {
-    width: 500px;
+    width: 600px;
     height: 70px;
     display: flex;
     justify-content: center;
@@ -45,7 +49,7 @@ nav > ul {
 }
 
 nav > ul > li {
-    width: 150px;
+    width: 100px;
     height: 70px;
     display: flex;
     justify-content: center;
@@ -53,40 +57,30 @@ nav > ul > li {
     font-weight: 900;
 }
 
-.slide {
-    width: 350px;
+.header-btn {
+    width: 400px;
     height: 70px;
     text-align: center;
     line-height: 70px;
     font-weight: 900;
 }
 
-.contetns {
-    width: 100%;
-    height: 800px;
-}
-
-.box {
-    width: 100%;
-    height: 800px;
-}
-
 .window {
-    width: 1200px;
+    width: 100%;
     height: 800px;
     overflow: hidden;
 }
 
-.slides {
+.slide {
     position: relative;
-    width: 3600px;
+    width: 9600px;
     height: 800px;
     display: flex;
-    animation: 10s slide infinite linear;
+    animation: slide 7s infinite linear;
 }
 
-.slides > img {
-    width: 1200px;
+.slide > img {
+    width: 1920px;
     height: 800px;
 }
 
@@ -100,146 +94,38 @@ nav > ul > li {
     }
 
     20% {
-        left: -1200px;
+        left: -1920px;
     }
 
     35% {
-        left: -1200px;
+        left: -1920px;
     }
 
     40% {
-        left: -2400px;
+        left: -3840px;
     }
 
     55% {
-        left: -2400px;
+        left: -3840px;
     }
 
     60% {
-        left: -3600px;
+        left: -5760px;
     }
 
     75% {
-        left: -3600px;
+        left: -5760px;
     }
 
     80% {
-        left: -4800px;
+        left: -7680px;
     }
 
     95% {
-        left: -4800px;
+        left: -7680px;
     }
 
     100% {
-        left: -6000px;
+        left: -9600px;
     }
-}
-
-.box > img {
-    width: 100%;
-    height: 100%;
-}
-
-.container {
-    width: 100%;
-}
-
-.itemBox {
-    max-width: 1920px;
-    display: flex;
-}
-
-.right {
-    width: 50%;
-    height: 900px;
-}
-
-.item1 {
-    width: 600px;
-    height: 300px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 34px;
-}
-
-.item2 {
-    position: relative;
-    width: 600px;
-    height: 300px;
-    font-weight: 900;
-    font-size: 20px;
-    text-align: center;
-}
-
-.item2 > img {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    width: 500px;
-    height: 250px;
-    margin-top: 15px;
-    border-radius: 10px;
-}
-
-.item2 > img:hover {
-    box-shadow: 0px 6px 6px rgba(0, 0, 0, 0.6);
-    transition: all 0.4s;
-}
-
-.item3 {
-    width: 600px;
-    height: 300px;
-    background-color: lightcoral;
-}
-
-.item1,
-.item2,
-.item3,
-.item4,
-.item5,
-.item6 {
-    margin-top: 15px;
-}
-
-.left {
-    width: 50%;
-    flex-direction: column;
-}
-
-.item3 {
-    width: 600px;
-    height: 300px;
-    border-radius: 20px;
-}
-
-.item3 > img {
-    width: 100%;
-    height: 100%;
-    border-radius: 20px;
-}
-
-.item3 > img:hover {
-    box-shadow: 0px 6px 6px rgba(0, 0, 0, 0.6);
-    transition: all 0.3s;
-}
-
-.item4 {
-    width: 600px;
-    height: 300px;
-    background-color: darkgoldenrod;
-}
-
-.item5 {
-    width: 600px;
-    height: 300px;
-    background-color: darkblue;
-}
-
-.item6 {
-    width: 600px;
-    height: 300px;
-    background-color: darkcyan;
 }
