--- a/kakao/style.css
+++ b/kakao/style.css
@@ -1,5 +1,5 @@
 * {
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
 }
 
@@ -84,48 +84,10 @@ nav > ul > li {
     height: 800px;
 }
 
-@keyframes slide {
-    0% {
-        left: 0;
-    }
-
-    15% {
-        left: 0;
-    }
-
-    20% {
-        left: -1920px;
-    }
-
-    35% {
-        left: -1920px;
-    }
-
-    40% {
-        left: -3840px;
-    }
-
-    55% {
-        left: -3840px;
-    }
-
-    60% {
-        left: -5760px;
-    }
-
-    75% {
-        left: -5760px;
-    }
-
-    80% {
-        left: -7680px;
-    }
-
-    95% {
-        left: -7680px;
-    }
-
-    100% {
-        left: -9600px;
-    }
+.con1 {
+    width: 800px;
+    height: 700px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
