--- a/nuribom/style.css
+++ b/nuribom/style.css
@@ -2,7 +2,6 @@
     margin: 0 auto;
     padding: 0;
 }
-
 body li {
     list-style: none;
 }
@@ -20,7 +19,7 @@ header {
     width: 100%;
     height: 100px;
     display: flex;
-    background: linear-gradient(45deg, darkblue, lightblue);
+    background-color: #ccd5ae;
     color: #fff;
 }
 
@@ -34,6 +33,8 @@ header {
 .logo {
     width: 300px;
     height: 100px;
+    color: #111;
+    font-size: 24px;
 }
 
 .logo > h1 {
@@ -51,6 +52,8 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    color: #111;
+    font-size: 22px;
 }
 
 .headerBtn > input {
@@ -278,7 +281,7 @@ nav {
     width: 100%;
     height: 50px;
     display: flex;
-    background-color: lightblue;
+    background-color: #ede0d4;
 }
 
 .items {
@@ -407,6 +410,7 @@ nav {
     width: 100%;
     height: 400px;
     margin-bottom: 40px;
+    background-color: #fff;
 }
 
 .idiom {
@@ -414,7 +418,7 @@ nav {
     width: 1200px;
     max-width: 1200px;
     height: 400px;
-    background-color: #A5ACE8;
+    background-color: #b08968;
 }
 
 .idiom > .idiom-main > button {
@@ -482,7 +486,7 @@ nav {
     width: 1200px;
     max-width: 1200px;
     height: 700px;
-    background-color: #A5ACE8;
+    background-color: #b08968;
 }
 
 .idiom-text {
