Feat: update-nuribom

--- a/nuribom/style.css
+++ b/nuribom/style.css
@@ -418,7 +418,7 @@ nav {
     width: 1200px;
     max-width: 1200px;
     height: 400px;
-    background-color: #b08968;
+    background-color: #d1be9c;
 }
 
 .idiom > .idiom-main > button {
