--- a/nuribom/log2.css
+++ b/nuribom/log2.css
@@ -21,7 +21,7 @@ header {
     width: 100%;
     height: 100px;
     display: flex;
-    background: linear-gradient(45deg, darkblue, lightblue);
+    background-color: #a9d6e5;
     color: #fff;
 }
 
@@ -102,7 +102,8 @@ header {
     left: 0;
     width: 90px;
     height: 40px;
-    background-color: lightblue;
+    background-color: #111;
+    color: #fff;
     text-align: center;
     line-height: 40px;
     cursor: pointer;
@@ -289,7 +290,7 @@ nav {
     width: 100%;
     height: 50px;
     display: flex;
-    background-color: lightblue;
+    background-color: #89c2d9;
 }
 
 .items {
@@ -377,7 +378,8 @@ nav {
     bottom: 0;
     width: 100px;
     height: 40px;
-    background-color: lightblue;
+    background-color: #111;
+    color: #fff;
     text-align: center;
     line-height: 40px;
     cursor: pointer;
@@ -425,7 +427,7 @@ nav {
     width: 1200px;
     max-width: 1200px;
     height: 400px;
-    background-color: #A5ACE8;
+    background-color: #d3d3d3;
 }
 
 .idiom > .idiom-main > button {
@@ -493,7 +495,7 @@ nav {
     width: 1200px;
     max-width: 1200px;
     height: 700px;
-    background-color: #A5ACE8;
+    background-color: #d3d3d3;
 }
 
 .idiom-text {
