--- a/nuribom/style.css
+++ b/nuribom/style.css
@@ -19,7 +19,7 @@ header {
     width: 100%;
     height: 100px;
     display: flex;
-    background-color: #ccd5ae;
+    background-color: #a9d6e5;
     color: #fff;
 }
 
@@ -94,7 +94,8 @@ header {
     left: 0;
     width: 90px;
     height: 40px;
-    background-color: lightblue;
+    background-color: #111;
+    color: #fff;
     text-align: center;
     line-height: 40px;
     cursor: pointer;
@@ -281,7 +282,7 @@ nav {
     width: 100%;
     height: 50px;
     display: flex;
-    background-color: #ede0d4;
+    background-color: #89c2d9;
 }
 
 .items {
@@ -369,7 +370,8 @@ nav {
     bottom: 0;
     width: 100px;
     height: 40px;
-    background-color: lightblue;
+    background-color: #111;
+    color: #fff;
     text-align: center;
     line-height: 40px;
     cursor: pointer;
@@ -418,7 +420,7 @@ nav {
     width: 1200px;
     max-width: 1200px;
     height: 400px;
-    background-color: #d1be9c;
+    background-color: #d3d3d3;
 }
 
 .idiom > .idiom-main > button {
@@ -486,7 +488,7 @@ nav {
     width: 1200px;
     max-width: 1200px;
     height: 700px;
-    background-color: #b08968;
+    background-color: #d3d3d3;
 }
 
 .idiom-text {
