--- a/nuribom/style.css
+++ b/nuribom/style.css
@@ -64,6 +64,86 @@ header {
     cursor: pointer;
 }
 
+.log-btn {
+    width: 180px;
+    height: 50px;
+    background-color: #00b4d8;
+    border-radius: 15px;
+    text-align: center;
+    line-height: 50px;
+}
+
+.log-btn:hover {
+    width: 180px;
+    height: 50px;
+    background-color: #90e0ef;
+    transition: all 0.3s;
+}
+
+.log-btn > input {
+    display: none;
+}
+
+.l-box {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 500px;
+    height: 400px;
+    background-color: #fff;
+    z-index: 1;
+    border: 3px solid;
+    border-radius: 15px;
+}
+
+.l-header {
+    width: 500px;
+    height: 100px;
+}
+
+.l-header > h1 {
+    line-height: 100px;
+}
+
+.l-main {
+    width: 500px;
+    height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.l-main > input {
+    width: 300px;
+    height: 50px;
+    margin-top: 20px;
+}
+
+.login {
+    width: 500px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.login > button{
+    width: 150px;
+    height: 50px;
+}
+
+.sign {
+    width: 500px;
+    height: 50px;
+}
+
+#log:checked~.l-box {
+    display: block;
+}
+
 .close1 {
     display: none;
 }
@@ -280,9 +360,12 @@ header {
 /* nav 영역 */
 nav {
     width: 100%;
-    height: 50px;
+    height: 80px;
     display: flex;
     background-color: #89c2d9;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .items {
@@ -312,22 +395,41 @@ nav {
     font-weight: 900;
 }
 
+
 .itemBox2 > input {
     display: none;
 }
 
-.box1,
-.box2,
-.box3,
-.box4,
-.box5,
 .box6,
 .box7,
 .box8,
 .box9 {
-    width: 90px;
-    height: 40px;
+    width: 400px;
+    height: 50px;
     line-height: 40px;
+    background-color: #ade8f4;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 15px;
+    margin-left: 20px;
+    cursor: pointer;
+}
+
+.box6:hover,
+.box7:hover,
+.box8:hover,
+.box9:hover {
+    background-color: #caf0f8;
+    transition: all 0.3s;
+}
+
+.itemBox2 > label {
+    display: block;
+    width: 400px;
+    height: 50px;
+    text-align: center;
+    line-height: 50px;
 }
 
 .box1 > input {
@@ -412,7 +514,7 @@ nav {
     width: 100%;
     height: 400px;
     margin-bottom: 40px;
-    background-color: #fff;
+    background-color: #f8f9fa;
 }
 
 .idiom {
