--- a/Performance assessment/style.css
+++ b/Performance assessment/style.css
@@ -41,7 +41,7 @@ ul {
     width: 600px;
     height: 70px;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
 }
 
@@ -54,8 +54,16 @@ li {
     font-size: 20px;
 }
 
+li:hover {
+    width: 160px;
+    height: 70px;
+    background-color: #d9d9d9;
+    transition: all 0.2s;
+}
+
 /* 메인 영역 */
 main {
+    position: relative;
     width: 100%;
     height: 900px;
 }
@@ -66,7 +74,7 @@ main > img {
 }
 
 .img-box {
-    position: fixed;
+    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
@@ -94,3 +102,276 @@ main > img {
     font-size: 60px;
 }
 
+/* 섹션 영역 */
+.container {
+    width: 100%;
+    height: 700px;
+    display: flex;
+    background-color: #e9ecef;
+}
+
+.se-img {
+    width: 700px;
+    height: 700px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.se-img > img {
+    opacity: 0.6;
+}
+
+.se-img > img:hover {
+    opacity: 1;
+    transition: all 0.2s;
+}
+
+/* 서브 타이틀 영역 */
+.sub-title {
+    position: relative;
+    width: 10px;
+    height: 440px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #778da9;
+}
+
+.se-sub {
+    position: absolute;
+    left: 0;
+    width: 100px;
+    height: 150px;
+}
+
+.se-sub > h1 {
+    font-size: 60px;
+}
+
+/* 서브 이미지 영역 */
+.se-img > img {
+    width: 600px;
+    height: 500px;
+    border-radius: 15px;    
+}
+
+/* 서브 텍스트 영역 */
+.se-text {
+    position: relative;
+    width: 910px;
+    height: 600px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 22px;
+    color: #778da9;
+}
+
+/* 컨테이너1 영역 */
+.con1 {
+    width: 100%;
+    height: 700px;
+    display: flex;
+}
+
+.c1-img {
+    width: 700px;
+    height: 700px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* 서브 타이틀 영역 */
+.sub-title2 {
+    position: relative;
+    width: 10px;
+    height: 440px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #40916c;
+}
+
+.se-sub {
+    position: absolute;
+    left: 0;
+    width: 100px;
+    height: 150px;
+}
+
+.c1-sub > h1 {
+    font-size: 60px;
+}
+
+/* 서브 이미지 영역 */
+.c1-img > img {
+    width: 600px;
+    height: 500px;
+    border-radius: 15px;    
+}
+
+.c1-img > img {
+    opacity: 0.6;
+}
+
+.c1-img > img:hover {
+    opacity: 1;
+    transition: all 0.2s;
+}
+
+
+/* 서브 텍스트 영역 */
+.c1-text {
+    position: relative;
+    width: 910px;
+    height: 600px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 22px;
+    color: #40916c;
+}
+
+/* 컨테이너2 영역 */
+.con2 {
+    width: 100%;
+    height: 700px;
+    display: flex;
+    background-color: #e9ecef;
+}
+
+.c2-img {
+    width: 700px;
+    height: 700px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* 서브 타이틀 영역 */
+.sub-title3 {
+    position: relative;
+    width: 10px;
+    height: 440px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #bf4342;
+}
+
+.se-sub {
+    position: absolute;
+    left: 0;
+    width: 100px;
+    height: 150px;
+}
+
+.c2-sub > h1 {
+    font-size: 60px;
+}
+
+/* 서브 이미지 영역 */
+.c2-img > img {
+    width: 600px;
+    height: 500px;
+    border-radius: 15px;
+    opacity: 0.6;
+}
+
+.c2-img > img:hover {
+    opacity: 1;
+    transition: all 0.2s;
+}
+
+/* 서브 텍스트 영역 */
+.c2-text {
+    position: relative;
+    width: 910px;
+    height: 530px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 22px;
+    color: #bf4342;
+}
+
+/* 컨테이너3 영역 */
+.con3 {
+    width: 100%;
+    height: 700px;
+    display: flex;
+}
+
+.c3-img {
+    width: 700px;
+    height: 700px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* 서브 타이틀 영역 */
+.sub-title4 {
+    position: relative;
+    width: 10px;
+    height: 440px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #3a86ff;
+}
+
+.se-sub {
+    position: absolute;
+    left: 0;
+    width: 100px;
+    height: 150px;
+}
+
+.c3-sub > h1 {
+    font-size: 60px;
+}
+
+/* 서브 이미지 영역 */
+.c3-img > img {
+    width: 600px;
+    height: 500px;
+    border-radius: 15px;
+    opacity: 0.6;
+}
+
+.c3-img > img:hover {
+    opacity: 1;
+    transition: all 0.2s;
+}
+
+/* 서브 텍스트 영역 */
+.c3-text {
+    position: relative;
+    width: 950px;
+    height: 700px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 22px;
+    color: #3a86ff;
+}
+
+/* 푸터 영역 */
+footer {
+    position: relative;
+    width: 100%;
+    height: 150px;
+    background-color: #eee;
+    display: flex;
+}
+
+.copyright {
+    width: 1300px;
+    height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
