--- a/nuribom/style.css
+++ b/nuribom/style.css
@@ -65,19 +65,12 @@ header {
 }
 
 .log-btn {
-    width: 150px;
+    width: 140px;
     height: 50px;
-    background-color: #00b4d8;
+    background-color: #fff;
     border-radius: 15px;
     text-align: center;
     line-height: 50px;
-}
-
-.log-btn:hover {
-    width: 140px;
-    height: 50px;
-    background-color: #90e0ef;
-    transition: all 0.3s;
 }
 
 .log-btn > input {
@@ -178,7 +171,7 @@ header {
     text-align: center;
     line-height: 40px;
     cursor: pointer;
-    border-bottom-left-radius: 15px;
+    border-bottom-left-radius: 13px;
 }
 
 .close2 > svg {
@@ -210,11 +203,17 @@ header {
 }
 
 .test-items > p {
-    background-color: gray;
+    background-color: #eee;
     width: 70px;
     display: flex;
     justify-content: center;
     align-items: center;
+    border-radius: 10px;
+}
+
+.test-items > p:hover {
+    background-color: #caf0f8;
+    transition: all 0.3s ease;
 }
 
 .test-items > p > a {
@@ -255,6 +254,8 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
+    border-radius: 15px;
+    border: 2px solid;
 }
 
 .hint-text {
@@ -296,6 +297,8 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
+    border-radius: 15px;
+    border: 2px solid;
 }
 
 .ex-text {
@@ -338,6 +341,8 @@ header {
     width: 900px;
     height: 500px;
     background-color: #fff;
+    border-radius: 15px;
+    border: 2px solid;
 }
 
 .review-header {
@@ -414,8 +419,7 @@ nav {
 .box9 {
     width: 400px;
     height: 50px;
-    line-height: 40px;
-    background-color: #ade8f4;
+    background-color: #ced4da;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -428,7 +432,7 @@ nav {
 .box7:hover,
 .box8:hover,
 .box9:hover {
-    background-color: #caf0f8;
+    background-color: #e9ecef;
     transition: all 0.3s;
 }
 
@@ -473,6 +477,7 @@ nav {
     height: 500px;
     background-color: #fff;
     border-radius: 15px;
+    border: 2px solid;
 }
 
 #modal1:checked~.modalb {
@@ -492,6 +497,8 @@ nav {
     background-color: #111;
     color: #fff;
     cursor: pointer;
+    border-bottom-left-radius: 13px;
+    line-height: 40px;
 }
 
 #close > svg {
@@ -615,7 +622,8 @@ nav {
 
 .idiom-text {
     width: 1200px;
-    height: 400px;
+    height: 500px;
+    padding: 30px;
 }
 
 .idiom-text > p {
