--- a/nuribom/style.css
+++ b/nuribom/style.css
@@ -212,7 +212,7 @@ header {
 }
 
 .test-items > p:hover {
-    background-color: #caf0f8;
+    background-color: #dee2e6;
     transition: all 0.3s ease;
 }
 
