--- a/nuribom/log2.css
+++ b/nuribom/log2.css
@@ -105,9 +105,12 @@ header {
     background-color: #111;
     color: #fff;
     text-align: center;
-    line-height: 40px;
     cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
 
 .header-test {
     width: 600px;
