--- a/nuribom2/index-folder/style.css
+++ b/nuribom2/index-folder/style.css
@@ -2,10 +2,11 @@
     margin: 0 auto;
     padding: 0;
     box-sizing: border-box;
+    font-family: "맑은 고딕","Malgun Gothic",serif;
 }
 
 body {
-    background-color: #6c757d;   
+    background-color: #231942; 
 }
 
 a {
@@ -19,9 +20,14 @@ li {
 
 /* 헤더 영역 */
 header {
+    position: fixed;
+    top: 0;
     width: 100%;
     display: flex;
     color: #fff;
+    background-color: #231942;
+    z-index: 1;
+    border-bottom: 1px solid;
 }
 
 .logo {
@@ -29,6 +35,7 @@ header {
     height: 100px;
     text-align: center;
     line-height: 100px;
+    font-size: 22px;
 }
 
 nav {
@@ -53,6 +60,7 @@ li {
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 20px;
 }
 
 .sns {
@@ -87,6 +95,7 @@ li {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
 
 .idiom-screen {
@@ -95,6 +104,8 @@ li {
     display: flex;
     overflow: hidden;
     border-radius: 15px;
+    margin-top: 120px;
+    flex-direction: column;
 }
 
 .idiom-items {
@@ -104,6 +115,7 @@ li {
     justify-content: center;
     align-items: center;
     border-radius: 15px;
+    color: #fff;
 }
 
 .idiom-items > div {
@@ -112,7 +124,7 @@ li {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: lightgray;
+    background-color: #8d99ae;
     border-radius: 15px;
     font-size: 36px;
 }
@@ -120,7 +132,7 @@ li {
 /* 버튼 */
 .button-area {
     width: 100%;
-    height: 100px;
+    height: 80px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -129,9 +141,36 @@ li {
 .prev-button,
 .next-button {
     cursor: pointer;
-    padding: 10px 20px;
+    padding: 20px 40px;
     background-color: #333;
     color: #fff;
     margin: 20px;
-    border-radius: 5px;
+    border-radius: 25px;
+}
+
+/* 컨테이너2 영역*/
+.con2 {
+    width: 100%;
+    height: 1500px;
+}
+
+.idiom-items2 {
+    width: 800px;
+    height: 700px;
+    display: flex;
+    flex-direction: column;
+    color: #fff;
+}
+
+.idiom-items2 > div {
+    width: 800px;
+    height: 200px;
+    background-color: #8d99ae;
+    margin-top: 50px;
+    padding: 20px;
+    border-radius: 15px;
+}
+
+.idiom-items2 > div > p {
+    margin-top: 15px;
 }
