--- a/nuribom2/index-folder/style.css
+++ b/nuribom2/index-folder/style.css
@@ -104,7 +104,7 @@ li {
     display: flex;
     overflow: hidden;
     border-radius: 15px;
-    margin-top: 120px;
+    margin-top: 170px;
     flex-direction: column;
 }
 
@@ -114,7 +114,7 @@ li {
     transition: transform 0.3s ease-in-out;
     justify-content: center;
     align-items: center;
-    border-radius: 15px;
+    border-radius: 1px;
     color: #fff;
 }
 
@@ -124,9 +124,15 @@ li {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     background-color: #8d99ae;
     border-radius: 15px;
     font-size: 36px;
+}
+
+.idiom-items > div > p {
+    font-size: 28px;
+    padding: 20px;
 }
 
 /* 버튼 */
@@ -164,7 +170,7 @@ li {
 
 .idiom-items2 > div {
     width: 800px;
-    height: 200px;
+    height: 130px;
     background-color: #8d99ae;
     margin-top: 50px;
     padding: 20px;
