Feat: nuribom-ver2

--- a/nuribom2/test-folder/style.css
+++ b/nuribom2/test-folder/style.css
@@ -44,7 +44,7 @@ li {
     width: 800px;
     height: 550px;
     margin-top: 20px;
-    background-color: #5e548e;
+    background-color: #8d99ae;
     padding: 10px;
     border-radius: 15px;
     color: #fff;
