--- a/nuribom2/index-folder/style.css
+++ b/nuribom2/index-folder/style.css
@@ -100,11 +100,11 @@ li {
 
 .idiom-screen {
     width: 800px;
-    height: 400px;
+    height: 600px;
     display: flex;
     overflow: hidden;
     border-radius: 15px;
-    margin-top: 170px;
+    margin-top: 150px;
     flex-direction: column;
 }
 
@@ -114,7 +114,6 @@ li {
     transition: transform 0.3s ease-in-out;
     justify-content: center;
     align-items: center;
-    border-radius: 1px;
     color: #fff;
 }
 
@@ -126,7 +125,6 @@ li {
     align-items: center;
     flex-direction: column;
     background-color: #8d99ae;
-    border-radius: 15px;
     font-size: 36px;
 }
 
@@ -138,10 +136,16 @@ li {
 /* 버튼 */
 .button-area {
     width: 100%;
-    height: 80px;
+    height: 120px;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.prev-button > svg,
+.next-button > svg {
+    width: 30px;
+    height: 30px;
 }
 
 .prev-button,
