--- a/nuribom2/study-folder/style.css
+++ b/nuribom2/study-folder/style.css
@@ -9,18 +9,24 @@ body {
     background-color: #231942;
 }
 
-header {
-    width: 100%;
-    padding: 15px 0;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+a {
+    text-decoration: none;
+    color: inherit;
 }
 
-h1 {
-    margin: 0;
-    font-size: 2rem;
+header {
+    width: 100%;
+    height: 100px;
+    color: white;
+}
+
+.logo {
+    position: absolute;
+    width: 570px;
+    height: 100px;
+    text-align: center;
+    line-height: 100px;
+    font-size: 22px;
 }
 
 main {
@@ -34,7 +40,17 @@ main {
     border-radius: 10px;
     text-align: center;
     width: 700px;
+    height: 700px;;
+}
+
+.image-display {
+    width: 400px;
     height: 400px;
+}
+
+.image-display > img {
+    border-radius: 15px;
+    cursor: pointer;
 }
 
 .selector-area {
@@ -51,5 +67,5 @@ select {
     background-color: #e0e0e0;
     padding: 15px;
     border-radius: 8px;
-    margin-top: 15px;
+    margin-top: 35px;
 }
