--- a/nuribom2/index-folder/style.css
+++ b/nuribom2/index-folder/style.css
@@ -164,6 +164,12 @@ li {
     height: 1500px;
 }
 
+/* 검색창 영역 */
+.select {
+    width: 100%;
+    height: 100px;
+}x  
+
 .idiom-items2 {
     width: 800px;
     height: 700px;
