--- a/nuribom2/test-folder/style.css
+++ b/nuribom2/test-folder/style.css
@@ -41,8 +41,8 @@ li {
     align-items: center;
 }
 .quiz-area {
-    width: 800px;
-    height: 550px;
+    width: 600px;
+    height: 650px;
     margin-top: 20px;
     background-color: #8d99ae;
     padding: 10px;
@@ -77,4 +77,35 @@ li {
     padding: 10px 20px;
     border-radius: 10px;
     cursor: pointer;
+}
+
+.btn-items {
+    width: 450px;
+    height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 20px;
+}
+
+#hint-button {
+    width: 100px;
+    height: 50px;
+    border-radius: 15px;
+    background-color: #fff;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+#dont-know-button {
+    background-color: transparent;
+    border: none;
+    text-decoration: underline;
+    color: blue;
+    cursor: pointer;
+}
+
+#quiz-status {
+    font-size: 22px;
 }
