--- a/nuribom2/communication-folder/style.css
+++ b/nuribom2/communication-folder/style.css
@@ -2,7 +2,9 @@
     margin: 0 auto;
     padding: 0;
     box-sizing: border-box;
-    font-family: "맑은 고딕","Malgun Gothic",serif;
+    font-family: "Nanum Pen Script", cursive;
+    font-weight: 400;
+    font-style: normal;
 }
 
 body {
