--- a/nuribom2/communication-folder/style.css
+++ b/nuribom2/communication-folder/style.css
@@ -2,9 +2,7 @@
     margin: 0 auto;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Nanum Pen Script", cursive;
-    font-weight: 400;
-    font-style: normal;
+    font-family: "맑은 고딕","Malgun Gothic",serif;
 }
 
 body {
@@ -93,4 +91,12 @@ button {
 
 .com-main {
     margin-top: 20px;
+}
+
+.reply-section {
+    margin-bottom: 20px;
+}
+
+.reply {
+    margin-bottom: 30px;
 }
