--- a/nuribom2/index-folder/style.css
+++ b/nuribom2/index-folder/style.css
@@ -2,9 +2,7 @@
     margin: 0 auto;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Nanum Pen Script", cursive;
-    font-weight: 400;
-    font-style: normal;
+    font-family: "맑은 고딕","Malgun Gothic",serif;
 }
 
 body {
@@ -191,7 +189,7 @@ li {
 /* 사자성어 영역 */
 .idiom-items2 {
     width: 800px;
-    height: 700px;
+    height: 6400px;
     display: flex;
     flex-direction: column;
     color: #fff;
